// Vitest Snapshot v1

exports[`factory basic > emit 'header.add.click' event, shoule render 'form data id' correctly 1`] = `
"<button>+</button>
<div class=\\"form-data-id\\">1</div>
<div class=\\"form-data-name\\">pung</div>
<div class=\\"form-fullname\\">我叫pung</div>"
`;

exports[`factory basic > should render 'form.fullname' computed correctly 1`] = `"<div class=\\"form-fullname\\">我叫pung</div>"`;

exports[`factory basic > shoule render 'form data id' correctly 1`] = `
"<button>+</button>
<div class=\\"form-data-id\\">0</div>
<div class=\\"form-data-name\\">pung</div>
<div class=\\"form-fullname\\">我叫pung</div>"
`;

exports[`factory basic > shoule render 'form data name' correctly 1`] = `
"<button>+</button>
<div class=\\"form-data-id\\">0</div>
<div class=\\"form-data-name\\">pung</div>
<div class=\\"form-fullname\\">我叫pung</div>"
`;
